# autoresearch-intro-guide

./: .gitignore  LICENSE  README.md  dashboard.py  prepare.py  program.md  pyproject.toml  run.py  train.py  train_baseline.py
