[project]
name = "autoresearch-intro-guide"
version = "0.1.0"
description = "An introductory guide to autonomous ML research — an LLM iteratively optimizes a trading model"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.84.0",
    "numpy>=2.4.3",
    "rich>=14.3.3",
]
